Fix footer background on mobile

--- a/resources/screen-desktop-small.less
+++ b/resources/screen-desktop-small.less
@@ -151,10 +151,6 @@
 	padding-right: 0.5em;
 }
 
-#mw-footer {
-	padding: 0 @content-padding;
-}
-
 // Personal menu
 
 #personal {
