--- a/resources/screen-mobile.less
+++ b/resources/screen-mobile.less
@@ -7,7 +7,7 @@
 
 #mw-data-after-content,
 #mw-footer {
-	padding: 0 @content-padding;
+	padding: 0 @content-padding 0.35em;
 }
 
 .categories-bottom();
